# tauri-xray

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/confdir/: 05_inbounds.json  06_1_outbounds.json  06_2_outbounds_tail.json  06_outbounds_1.json
src-tauri/resources/outbound/: jp_outbounds.json
src-tauri/resources/routing/: all.routing.json  direct.routing.json  pac.routing.json
src-tauri/src/: cmds.rs  macros.rs  main.rs
src-tauri/src/core/: config.rs  mod.rs  path.rs  sys.rs  tray.rs  xray.rs
