[package]
name = "tauri-xray"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.20"
tauri = { version = "1.5", features = [ "fs-all", "process-all", "global-shortcut-all", "window-all", "shell-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
sysinfo = "0.29.10"
open = "5.0.1"
rustem_proxy = "0.1.5"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1",features= ["colored"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
clipboard-ext = "0.2.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


